style correction for spacing

--- a/style.css
+++ b/style.css
@@ -21,6 +21,6 @@ container {
   }
 
   .personal p {
-    font-size: larger;
+    font-size: large;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
